src/test/ui/if/if-loop.stderr
error: compilation successful
  --> $DIR/if-loop.rs:10:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

